# chessament

./: .flatpak-manifest.json  .gitignore  CMakeLists.txt  README.md  REUSE.toml  dev.alcarazzam.chessament.appdata.xml  dev.alcarazzam.chessament.desktop  org.kde.chessament.desktop  org.kde.chessament.metainfo.xml  update-translations.sh
.github/workflows/: ci.yml  flatpak.yml
android/: AndroidManifest.xml  version.gradle.in
autotests/: CMakeLists.txt  tournamenttest.cpp
autotests/data/: tournament_1.txt
po/: chessament.pot
po/es/: chessament.po
src/: CMakeLists.txt  Messages.sh  account.cpp  account.h  chessamentapplication.cpp  chessamentapplication.h  chessamentconfig.kcfg  chessamentconfig.kcfgc  config.kcfg  controller.cpp  controller.h  db.h  documents.cpp  event.cpp  event.h  main.cpp  pairing.cpp  pairing.h  pairingengine.cpp  pairingengine.h  pairingmodel.cpp  pairingmodel.h  player.cpp  player.h  playersmodel.cpp  playersmodel.h  round.cpp  round.h  standingsmodel.cpp  standingsmodel.h  tiebreak.h  tiebreaks.cpp  tiebreaks.h  tournament.cpp  tournament.h  tournamentcontroller.cpp  tournamentcontroller.h  tournamentstate.cpp  tournamentstate.h  trf.cpp  (+1 more)
src/players/: CMakeLists.txt1
src/qml/: AddPlayerDialog.qml  DocsPage.qml  Main.qml  NavigationButtonDelegate.qml  NewTournamentDialog.qml  PairingsPage.qml  PlayerDetails.qml  PlayerDrawer.qml  PlayersPage.qml  ResultsFooter.qml  StandingsPage.qml  TableDelegate.qml  TablePage.qml  TournamentSettings.qml  TournamentSettingsCalendar.qml  TournamentSettingsFormat.qml  TournamentSettingsInformation.qml  WelcomePage.qml
src/settings/: CMakeLists.txt  ChessamentConfigurationView.qml  GeneralPage.qml
